added enable preview to gradle build